@@ -388,9 +388,13 @@ int main(int argc, char **argv)
         switch (SpecType)
         {
             case SPEC_WIN16:
+#if defined(WIN32)
+                fatal_error( "Win16 specs are not supported in ReactOS version of winebuild\n" );
+#else
                 if (argv[0])
                     fatal_error( "file argument '%s' not allowed in this mode\n", argv[0] );
                 BuildSpec16File( output_file );
+#endif
                 break;
             case SPEC_WIN32:
                 read_undef_symbols( argv );
@@ -415,12 +419,20 @@ int main(int argc, char **argv)
         BuildDebugFile( output_file, current_src_dir, argv );
         break;
     case MODE_RELAY16:
+#if defined(WIN32)
+        fatal_error( "Win16 relays are not supported in ReactOS version of winebuild\n" );
+#else
         if (argv[0]) fatal_error( "file argument '%s' not allowed in this mode\n", argv[0] );
         BuildRelays16( output_file );
+#endif
         break;
     case MODE_RELAY32:
+#if defined(WIN32)
+        fatal_error( "Win32 relays are not supported in ReactOS version of winebuild\n" );
+#else
         if (argv[0]) fatal_error( "file argument '%s' not allowed in this mode\n", argv[0] );
         BuildRelays32( output_file );
+#endif
         break;
     default:
         usage(1);
